tests/baselines/reference/parserIndexSignature5.errors.txt
==== tests/cases/compiler/parserIndexSignature5.ts (1 errors) ====
    interface I {
      [a]
       ~
!!! parserIndexSignature5.ts(2,4): error TS1022: Index signature parameter must have a type annotation.
    }